Improved a part of the code in the restore and update, changed the config format (now uses classes instead) and added new -e/--check_server option.

--- a/xmc_config.cfg
+++ b/xmc_config.cfg
@@ -1,11 +1,10 @@
 [data]
-worlds = world
+worlds = ["world"]
 screen = minecraft_server_xmc
 start_server_command = java -Xmx1024M -Xms1024M -jar minecraft_server.jar nogui
 use_broadcast = false
 multiworld_support = false
-announce_messages = message1
-                    message2
+announce_messages = ["message1", "message2"]
 server_tool = craftbukkit
 server_jar_name = minecraft_server.jar
 
