--- a/xmc_config.cfg
+++ b/xmc_config.cfg
@@ -7,6 +7,7 @@ multiworld_support = false
 announce_messages = ["message1", "message2"]
 server_tool = craftbukkit
 server_jar_name = minecraft_server.jar
+sort_backups = true
 datetime_format = %Y-%m-%d_%H-%M
 
 #Available options for 'server_tool' are 'craftbukkit' and 'spigot'
