Added customizable messages

--- a/xmc_config.cfg
+++ b/xmc_config.cfg
@@ -3,12 +3,29 @@ worlds = ["world"]
 screen = minecraft_server_xmc
 start_server_command = java -Xmx1024M -Xms1024M -jar minecraft_server.jar nogui
 use_broadcast = false
-multiworld_support = false
 announce_messages = ["message1", "message2"]
+multiworld_support = false
 server_tool = craftbukkit
 server_jar_name = minecraft_server.jar
 sort_backups = true
-datetime_format = %Y-%m-%d_%H-%M
 
 #Available options for 'server_tool' are 'craftbukkit' and 'spigot'
 #Please use consistent names for your server jar file, otherwise the update script might not work properly
+
+[localization]
+datetime_format = %Y-%m-%d_%H-%M
+backup = Backing up worlds
+backup_as = Backing up worlds as a '{0}' backup
+#{0} - Backup name
+saving_world = Saving the world...
+backup_finished = Finished the backup!
+restart = Server is restarting
+stopping = Stopping server in {0} second{1}...
+#{0} - Number of seconds left until stopping the server
+#{1} - Plural for seconds, if there is more than 1 second it will be 's'
+restoring_backup = Restoring backup
+downloading_updates = Downloading server updates
+downloading_development_version = Downloading development version
+downloading_version_with_revision = Downloading version with revision '{0}'
+#{0} - The specified revision to download given by the user through special arguments
+updating = Updating server
