Added ability to change backup directory location

--- a/xmc_config.cfg
+++ b/xmc_config.cfg
@@ -7,6 +7,7 @@ announce_messages = ["message1", "message2"]
 multiworld_support = false
 server_tool = craftbukkit
 server_jar_name = minecraft_server.jar
+backup_folder = backups
 sort_backups = true
 
 #Available options for 'server_tool' are 'craftbukkit' and 'spigot'
